--- a/README
+++ b/README
@@ -1,4 +1,34 @@
-This is a puppet module to help you set up Sakai OAE.
+This is a puppet module to help you set up Sakai OAE servers.
 
-This is not a fully featured puppet setup. For an example check out
-http://github.com/efroese/puppet-oae-example
+This is not a fully featured puppet setup. 
+For an example check out http://github.com/efroese/puppet-oae-example
+
+Currently we can create a few different kinds of OAE servers.
+
+### OAE Application nodes
+
+example:
+
+    node oae-app0 inherits oaenode {
+        class { 'oae::app::server': }
+    }
+
+### OAE Solr search nodes
+
+example:
+
+    node oae-solr0 inherits oaenode {
+        class { 'oae::solr::common':
+            solrconfig => 'oae/master-solrconfig.cfg',
+            master_url => 'http://192.168.1.70:8080/solr/replication',
+        }
+    }
+
+### OAE Preview processor nodes
+
+example:
+
+    node oae-preview inherits oaenode {
+        class { 'oae::preview_processor::init': }
+    }
+
